# instrumentacao

./: .gitignore  ADS1115.c  ADS1115.h  ApplicationManager.c  ApplicationManager.h  BatteryMonitor.c  BatteryMonitor.h  CMakeLists.txt  CalibrationHelper.c  CalibrationHelper.h  Channel.c  Channel.h  ConfigYAML.c  ConfigYAML.h  ConfigurationLoader.c  ConfigurationLoader.h  CsvLogger.c  CsvLogger.h  DataPublisher.c  DataPublisher.h  DataQueue.c  DataQueue.h  DisplayManager.c  DisplayManager.h  HardwareManager.c  HardwareManager.h  LineProtocol.c  LineProtocol.h  Measurement.c  MeasurementCoordinator.c  MeasurementCoordinator.h  OfflineQueue.c  OfflineQueue.h  README.md  Sender.c  Sender.h  SocketServer.c  SocketServer.h  TimingUtils.c  TimingUtils.h  (+15 more)
ads1115_view/: ads1115_i2c_diagram.html
configurations/: bancada.yaml  bike.yaml  config_schema.md  empty.yaml  friends.yaml  invalid_test.yaml
